# powerssl

./: .dockerignore  .gitignore  .gitlab-ci.yml  BUILD  Dockerfile  LICENSE  Makefile  Procfile  README.md  WORKSPACE  docker-compose.yml  go.mod  go.sum
.circleci/: base-config.yml  config-header-comment.txt  config.yml
.github/: labeler.yml  main.workflow
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  close-stale-issues.yml
agent/: Dockerfile  Makefile  circleci.dockerfile  config.yaml  go.mod  go.sum  main.go
agent/.circleci/: config.yml
agent/internal/: agent.go  config.go  provider.go  wire.go  wire_gen.go
api/: Makefile  go.mod  go.sum  tools.go
api/openapi/: bindata.go  doc.go
api/scripts/: generate-protobuf.sh
api/v1/: BUILD.bazel  domain.proto  integration.proto  issue.proto
apiserver/: Dockerfile  Makefile  circleci.dockerfile  config.yaml  go.mod  go.sum  main.go  sqlc.yaml
apiserver/.circleci/: config.yml
apiserver/db/: schema.sql
apiserver/internal/: apiserver.go  config.go  provider.go  wire.go  wire_gen.go
apiserver/scripts/: migrate-create.sh
apiserver/tools/: tools.go
auth/: Dockerfile  Makefile  circleci.dockerfile  config.yaml  go.mod  go.sum  main.go
auth/.circleci/: config.yml
auth/internal/: auth.go  config.go  jwks.go  provider.go  wire.go  wire_gen.go
auth/web/: index.html
backend/: go.mod  go.sum
backend/apiserver/: client.go
backend/auth/: auth.go
backend/context/: apiserver.go  auth.go  ctxkey.go  vault.go
backend/ctxkey/: ctxkey.go
backend/grpcserver/: certify.go  config.go  provider.go  server.go  transport.go
backend/httpfs/: fs.go
backend/middleware/: middleware.go
backend/telemetry/: config.go  provider.go  telemetry.go
backend/temporal/: temporal.go
backend/transport/: config.go  grpc_server.go  provider.go  transport.go
backend/uid/: uid.go
backend/vault/: client.go  (+3 more)
cmd/api/: BUILD.bazel  api.go  main.go
common/: error.go  go.mod  go.sum  interrupt_handler.go  logger.go  validator.go
controller/: Dockerfile  Makefile  circleci.dockerfile  config.yaml  go.mod  go.sum  tools.go
deployments/: Procfile  docker-compose.yml  init-vault.sh  vault.sh
docs/: 404.html  CNAME  Gemfile  README.md  _config.yml  index.md
envoy/: Dockerfile  Makefile  envoy.yaml
examples/: Makefile  README.md  powerctl.yaml
grpcgateway/: Dockerfile  Makefile  circleci.dockerfile  config.yaml  go.mod  go.sum  main.go
helm/: Chart.yaml  values.yaml
makefiles/: common.mk  component.mk  go.mk  go_bootstrap.mk  go_generate.mk  help.mk  integration.mk  library.mk  main.mk  tool.mk
pkg/domain/endpoint/: BUILD.bazel  middleware.go  set.go
pkg/domain/service/: BUILD.bazel  middleware.go  service.go
pkg/domain/transport/: BUILD.bazel  grpc.go
powerctl/: Dockerfile  Makefile  circleci.dockerfile  config.yaml  go.mod  go.sum  main.go
powerssl-agent/: go.mod
powerssl-apiserver/: go.sum
powerssl-auth/: go.mod  go.sum
powerssl-controller/: go.mod  main.go
powerssl-grpcgateway/: go.mod  go.sum
powerssl-webapp/: go.mod  go.sum  main.go
powerssl-worker/: go.mod
powerutil/: Dockerfile  Makefile  circleci.dockerfile  go.mod  go.sum  main.go
scripts/: build-go.sh  build-image.sh  build.sh  check-scripts.sh  clean-go.sh  docker-build.sh  fmt-go.sh  generate-circleci-config.sh  generate-go.sh  generate-protobuf.sh  install-go.sh  install.sh  migrate-create.sh  openapi-ui.sh  release-image.sh  swagger-ui.sh  tctl.sh  test-go.sh  tidy-go.sh  vault.sh  vet-go.sh
sdk/: Makefile  context.go  go.mod  go.sum
signer/: Dockerfile  Makefile  circleci.dockerfile  go.mod  go.sum  main.go
temporal/: Dockerfile  Makefile  circleci.dockerfile  config.yaml  go.mod  go.sum  main.go
temporalserver/: Dockerfile  Makefile  circleci.dockerfile  go.mod  go.sum  main.go
tools/: tools.go
webapp/: Dockerfile  Makefile  circleci.dockerfile  config.yaml  go.mod  go.sum
worker/: Dockerfile  Makefile  circleci.dockerfile  config.yaml  go.mod  go.sum  main.go
workflow/: createaccount.go  go.mod  go.sum
(+1242 files in other folders)
