# gazelle:ignore

load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "powerssl_v1_proto",
    srcs = [
        "domain.proto",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_googleapis_googleapis//:annotations_proto",
        "@com_github_googleapis_googleapis//:status_proto",
        "@com_google_protobuf//:empty_proto",
        "@com_google_protobuf//:field_mask_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

go_proto_library(
    name = "powerssl_v1_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "powerssl.io/api/v1",
    proto = ":powerssl_v1_proto",
    visibility = ["//visibility:public"],
    deps = [
        "@org_golang_google_genproto//googleapis/api/annotations:go_default_library",
        "@org_golang_google_genproto//googleapis/rpc/status:go_default_library",
        "@org_golang_google_genproto//protobuf/field_mask:go_default_library",
        "@org_golang_google_genproto//protobuf/ptype:go_default_library",
    ],
)

go_library(
    name = "go_default_library",
    embed = [":powerssl_v1_go_proto"],
    importpath = "powerssl.io/api/v1",
    visibility = ["//visibility:public"],
)
