load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "middleware.go",
        "set.go",
    ],
    importpath = "powerssl.io/pkg/domain/endpoint",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/domain:go_default_library",
        "//pkg/domain/service:go_default_library",
        "@com_github_go_kit_kit//endpoint:go_default_library",
        "@com_github_go_kit_kit//log:go_default_library",
    ],
)
