load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "middleware.go",
        "service.go",
    ],
    importpath = "powerssl.io/pkg/domain/service",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/domain:go_default_library",
        "@com_github_go_kit_kit//log:go_default_library",
        "@com_github_jinzhu_gorm//:go_default_library",
    ],
)
