load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["grpc.go"],
    importpath = "powerssl.io/pkg/domain/transport",
    visibility = ["//visibility:public"],
    deps = [
        "//api/v1:go_default_library",
        "//pkg/domain:go_default_library",
        "//pkg/domain/endpoint:go_default_library",
        "@com_github_go_kit_kit//log:go_default_library",
        "@com_github_go_kit_kit//transport/grpc:go_default_library",
        "@com_github_golang_protobuf//ptypes/empty:go_default_library",
        "@org_golang_x_net//context:go_default_library",
    ],
)
